Nablarchの特定バージョンへの依存が必要ないため、nablarch-parentを除去 (#8)
* Nablarchの特定バージョンへの依存が必要ないため、nablarch-parentを除去

* nablarch-parentの5系に合わせて修正